# OpenVectorFormatTools

./: manage_license_headers.py
ReaderWriterCpp/: CMakeLists.txt
ReaderWriterCpp/example/: CMakeLists.txt
ReaderWriterCpp/example/ex1/: CMakeLists.txt  main.cc
ReaderWriterCpp/example/ex1_write/: main.cc
ReaderWriterCpp/example/ex2_read/: main.cc
ReaderWriterCpp/reader_writer/: CMakeLists.txt
ReaderWriterCpp/reader_writer/inc/: consts.h  memory_mapping_win32.h  ovf_file_reader.h  ovf_file_writer.h  util.h
ReaderWriterCpp/reader_writer/src/: open_vector_format.pb.cc  ovf_file_reader.cc  ovf_file_writer.cc  ovf_lut.pb.cc  util.cc
